# DeltaShadow

./: AnimTile.cpp  AnimTile.h  CMakeLists.txt  DeltaShadow.Program.cpp  DeltaShadow.Program.h  DeltaShadow.SetupForm.cpp  DeltaShadow.SetupForm.h  DeltaShadow.pro  EventsObjects.cpp  EventsObjects.h  GEngine.cpp  GEngine.h  GameObject.cpp  GameObject.h  GameObjectsSubprog.cpp  GameObjectsSubprog.h  Main.cpp  Main.h  Makefile  Menu.cpp  Menu.h  ObjectAnimation.cpp  ObjectAnimation.h  ObjectData.cpp  ObjectData.h  Platforming.cpp  Platforming.h  ProcessingObjects.cpp  ProcessingObjects.h  Program.cpp  Program.h  Program2.h  README.md  RaceLevel.cpp  RaceLevel.h  RoomLayers.cpp  RoomLayers.h  SEngine.cpp  SEngine.h  Scenes.cpp  (+19 more)
Environment/: PrimaryScreen.cpp  PrimaryScreen.h  SpecialFolder.cpp  SpecialFolder.h
Properties/: AssemblyInfo.cpp  AssemblyInfo.h  Resources.Designer.cpp  Resources.Designer.h
Resources/: AlienClawClassic.scproj  AlienWormNext.scproj  BigSpiderClassic.scproj  BugClassic.scproj  BugNext.scproj  CrakenClassic.scproj  CrakenNext.scproj  DLC.loc  DLCBoss.loc  DLCBossClassic.scproj  DragonflyClassic.scproj  DronClassic.scproj  FighterBomberNext.scproj  FlyBossClassic.scproj  FlyBossNext.scproj  GunNext.scproj  JacquelineClassic.scproj  JacquelineNext.scproj  JellyClassic.scproj  MegabrainClassic.scproj  MothNext.scproj  NovaNext.scproj  RaceClassic.scproj  RaceNext.scproj  RocketmanNext.scproj  SpiderNext.scproj  SuitClassic.scproj  boss 1.loc  classic_bar.smproj  classic_escape_1.smproj  classic_escape_2.smproj  classic_escape_3.smproj  classic_intro.smproj  classic_j_escape.smproj  classic_race_top.smproj  dragon 3.loc  finalboss 1.loc  finalboss 2.loc  font.ch8  font_english.ch8  (+20 more)
SdlDotNetCompat/Audio/: Mixer.cpp  Mixer.h  Music.cpp  Music.h  MusicPlayer.cpp  MusicPlayer.h  Sound.cpp  Sound.h
SdlDotNetCompat/Core/: BaseSdlResource.cpp  BaseSdlResource.h  EventHandler.cpp  EventHandler.h  Events.cpp  Events.h  QuitEventArgs.cpp  QuitEventArgs.h  SdlEventArgs.cpp  SdlEventArgs.h  SdlException.cpp  SdlException.h  TickEventArgs.cpp  TickEventArgs.h  UserEventArgs.cpp  UserEventArgs.h
SdlDotNetCompat/Drawing/: Color.cpp  Color.h  Point.h  Rectangle.cpp  Rectangle.h  Size.h
SdlDotNetCompat/Graphics/: Surface.cpp  Surface.h  Video.cpp  Video.h  VideoExposeEventArgs.cpp  VideoExposeEventArgs.h  VideoInfo.cpp  VideoInfo.h  VideoResizeEventArgs.cpp  VideoResizeEventArgs.h
SdlDotNetCompat/Input/: ActiveEventArgs.cpp  ActiveEventArgs.h  Joystick.cpp  Joystick.h  Joysticks.cpp  Joysticks.h  Keyboard.cpp  Keyboard.h  KeyboardEventArgs.cpp  KeyboardEventArgs.h  Mouse.cpp  Mouse.h  MouseButtonEventArgs.cpp  MouseButtonEventArgs.h  MouseMotionEventArgs.cpp  MouseMotionEventArgs.h
Util/: BinaryStreamReader.cpp  BinaryStreamReader.h  BinaryStreamWriter.cpp  BinaryStreamWriter.h  File.cpp  File.h  Random.cpp  Random.h
cmake/Modules/: FindSDL_gfx.cmake
res/animations/: AlienClawNext.scproj  AlienPetClassic.scproj  AlienPetNext.scproj  AlienSlidermanClassic.scproj  AlienSlidermanNext.scproj  AlienWormClassic.scproj  BigSpiderNext.scproj  CrabBossClassic.scproj  CrabBossNext.scproj  DLCBossNext.scproj  DLCJacquelineClassic.scproj  DLCJacquelineNext.scproj  DragonflyNext.scproj  DronBomberClassic.scproj  DronBomberNext.scproj  DronNext.scproj  FighterBomberClassic.scproj  GunClassic.scproj  ItemsClassic.scproj  ItemsNext.scproj  JellyNext.scproj  MegabrainNext.scproj  MothClassic.scproj  NovaClassic.scproj  PiranhaClassic.scproj  PiranhaNext.scproj  RocketmanClassic.scproj  SlimeClassic.scproj  SlimeNext.scproj  SonusVenatorClassic.scproj  SonusVenatorNext.scproj  SpiderClassic.scproj  SuitNext.scproj  TanketteClassic.scproj  TanketteNext.scproj
res/fonts/: platformer_mode_font.ch8
res/locations/: Jacqueline.loc  boss 2.loc  boss 3.loc  dragon 1.loc  dragon 2.loc  finalboss 0.loc  level 1-2.loc  level 2-1.loc  level 2-2.loc  level 2-3.loc  level 2-4.loc  level 3-1.loc  (+7 more)
(+19 files in other folders)
